change image location

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,25 +1,17 @@
 steps:
 
     - id: "Running TEST"
-      name: 'gcr.io/cloud-builders/go'
+      name: 'https://hub.docker.com/_/golang'
       args: ['test','-timeout','30s','-run','^TestSum1$']  
     
     - id: "Running Build"
-      name: 'gcr.io/cloud-builders/go'
+      name: 'https://hub.docker.com/_/golang'
       args: ['build','-ldflags','"-s -w"','--buildmode=exe','-o','main']  
     
-    - id: "Chown in /var/www/storage"
+    - id: "Building Image"
       name: 'gcr.io/cloud-builders/docker'
-      args: ['exec','-u','root','-t','app','chown','-R','www-data:www-data','/var/www/storage']
+      args: ['build','.']
     
-    - id: "Chmod /var/www/storage"
+    - id: "Pushing Image"
       name: 'gcr.io/cloud-builders/docker'
-      args: ['exec','-u','root','-t','app','chmod','0777','/var/www/storage','-R']
-    
-    - id: "Running composer"
-      name: 'gcr.io/cloud-builders/docker'
-      args: ['exec','-t','app','composer','install']  
-    
-    - id: "Running phpunit"
-      name: 'gcr.io/cloud-builders/docker'
-      args: ['exec','-t','app','php','/var/www/vendor/bin/phpunit','-c','/var/www/phpunit.xml']
+      args: ['push','$PROJECT_ID/go-ci-sample']
